Updated link from gabbar to gabbar-frontend

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 <input id='changesetInput' value='' placeholder='Changeset ID' />
                 <button id='submitChangeset' class='btn round'>Submit</button>
             </form>
-            <small>Ex: <a target="_blank" href='https://mapbox.github.io/gabbar/#48216777'>https://mapbox.github.io/gabbar/#48216777</a></small>
+            <small>Ex: <a target="_blank" href='https://mapbox.github.io/gabbar-frontend/#48216777'>https://mapbox.github.io/gabbar/#48216777</a></small>
         </div>
     </div>
 
